--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,11 @@
 * {
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Lucida Console", Monaco, monospace;
 }
 
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Lucida Console", Monaco, monospace;
 }
 
 /* Style the top navigation bar */
