Added in projects to Projects section. Projects listed with pictures and caption. Added separate page for each project, which are currently blank. Added border to portrait in home section. Added 5 percent margins on either side of each paragraph tag.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,6 +101,15 @@ a.anchor {
   display: inline;
 }
 
+p {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+figure {
+  display: inline-block;
+}
+
 /* Style the footer */
 .footer {
   text-align: center;
